fix vertical spacing

--- a/css/style_overides.css
+++ b/css/style_overides.css
@@ -308,9 +308,8 @@ img{
 /* Mobile Styles */
 
 @media only screen and (max-width: 600px){
-	navbar-default{
+	.navbar-default{
 		margin-top: 3px;
-		margin-left: 10px;
 	}
 	.col-xs-5 {
 		padding-left: 20px;
@@ -329,15 +328,27 @@ img{
 		padding-left: 0;
 	}
 	.margin-top-100{
-		margin-top: 60px;
+		margin-top: 58px;
+	}
+	.patientbuddy-section{
+		margin-top: 57px;
 	}
 	.margin-bottom-150{
-		margin-bottom: 90px;
+		margin-bottom: 89px;
 	}
 	.footer hr{
 		margin-left: 20px;
 		margin-right: 18px;
 		margin-bottom: 22px;
+	}
+	.project-description h2{
+		margin-top: 20px;
+	}
+	.project-description .glofox-heading{
+		margin-top: 18px;
+	}
+	.project-description .patientbuddy-heading{
+		margin-top: 18px;
 	}
 }
 
